Closed
Bug 1657764
Opened 5 years ago
Closed 5 years ago
Opt builds with JS_JITSPEW no longer build
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
People
(Reporter: anba, Assigned: anba)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
/home/andre/hg/mozilla-inbound/js/src/shell/js.cpp:5167:9: error: use of undeclared identifier 'DumpParseTree'
DumpParseTree(pn, out);
^
/home/andre/hg/mozilla-inbound/js/src/shell/js.cpp:5219:9: error: use of undeclared identifier 'DumpParseTree'
DumpParseTree(pn, out);
^
2 errors generated.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f245efd43ec2
Remove incorrect ifdef guard around DumpParseTree. r=arai
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1654149
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
Updated•5 years ago
|
Keywords: regression
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•