Bug 1657764: Remove incorrect ifdef guard around DumpParseTree. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D86313